# backpack-rust-sdk

./: Cargo.toml  README.md
examples/: get_assets.rs
src/: client.rs  error.rs  lib.rs  signer.rs
src/endpoints/: assests.rs  borrow_lend.rs  collateral.rs  depth.rs  funding_rate.rs  get_account.rs  klines.rs  mark_price.rs  markets.rs  mod.rs  open_interest.rs  prediction.rs  ticker.rs  trades.rs
src/types/: account.rs  assests.rs  borrow_lend.rs  collateral.rs  depth.rs  funding_rate.rs  klines.rs  mark_price.rs  markets.rs  mod.rs  open_interest.rs  prediction.rs  ticker.rs  trades.rs
src/ws/: mod.rs
