[package]
name = "backpack-sdk-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
ed25519-dalek = "2.2.0"
reqwest = {version = "0.13.2" , features = ["json"]  }
serde = {version = "1.0.228", features = ["derive"]  }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
